[package]
name = "ipv8-rust-tunnels"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_endpoint"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.25"
arc-swap = "1.7.1"
chacha20poly1305 = "0.10.1"
socks5-proto = "0.4.1"
socks5-server = "0.10.1"
bytes = "1.10.0"
rand = "0.9.0"
map-macro = "0.3.0"
